// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "Button.elo.css": "._1p38iz4 {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

._1p38iz4__Type-Primary {
  color: red
}

._1p38iz4__Type-Primary__Mode-Dark {
  color: blue
}

._1p38iz4__Mode-Light {
  color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap } from '@elodin/runtime'

const variantMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

export function Button(props = {}) {
  return {
    _className: getClassNameFromVariantMap('_elo_view _1p38iz4', variantMap, props),
    \\"borderWidth\\":props.borderWidth
  }
}",
  "Label.elo.css": "._1edorjp:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'

export function Label(props = {}) {
  return {
    _className: '_elo_text _1edorjp',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize}
  }
}",
  "undefined.js": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should use the given adapter 1`] = `
Object {
  "Button.elo.css": "._1p38iz4 {
  background-color: red;
  padding-left: 10px;
  border: 0px
}

._1p38iz4__Type-Primary {
  color: red
}

._1p38iz4__Type-Primary__Mode-Dark {
  color: blue
}

._1p38iz4__Mode-Light {
  color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { createComponent } from 'react-fela'
import { getClassNameFromVariantMap } from '@elodin/runtime'

const variantMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

function Button(props  = {}) {
  return {
    _className: getClassNameFromVariantMap('_elo_view _1p38iz4', variantMap, props),
    \\"borderWidth\\":props.borderWidth
  }
}

export default createComponent(Button)",
  "Label.elo.css": "._1edorjp:hover {
  color: red
}",
  "Label.elo.js": "import './Label.elo.css'
import { createComponent } from 'react-fela'

function Label(props  = {}) {
  return {
    _className: '_elo_text _1edorjp',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize}
  }
}

export default createComponent(Label)",
  "root.js": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;
